fix spacing

--- a/style/style.css
+++ b/style/style.css
@@ -299,7 +299,7 @@ body {
 
   #views {
     left: 50vw;
-    top: calc(20vh + var(--box-height) + 12px);
+    top: calc(var(--box-height) + 12px);
     transform: TranslateX(-50%);
   }
 }
